examples/test/testpolicy1814.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1814
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key22: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value3
      podSelector:
        matchLabels:
          key42: value45
          key7: value32
          key41: value27
